<resources>
    <string name="app_name">mad_rental</string>
    <string name="no_network">Aucun réseau</string>
    <string name="prixjournalierbase">€ / jour</string>
    <string name="categorieco2">Catégorie C02:</string>
    <string name="disponible">Disponible:</string>
    <string name="promotion">Promotion:</string>
    <string name="agemin">Agemin:</string>
    <string name="label_favorite">Favoris</string>
</resources>