<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".fragments.DetailFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
            xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            android:id="@+id/layout"
            android:layout_width="match_parent"
            android:layout_height="300px">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" app:layout_constraintTop_toTopOf="parent">
            <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">
                <LinearLayout
                        android:id="@+id/name"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintTop_toTopOf="parent"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/car_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            app:layout_constraintRight_toLeftOf="@id/prixjournalierbase"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/prixjournalierbase"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">
                    <TextView
                            android:id="@+id/value_prixjournalierbase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"/>
                    <TextView
                            android:id="@+id/label_prixjournalierbase"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10px"
                            android:text="@string/prixjournalierbase"
                            app:layout_constraintLeft_toRightOf="@+id/value_prixjournalierbase"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/categorieco2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/prixjournalierbase">
                    <TextView
                            android:id="@+id/label_categorieco2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/categorieco2"/>
                    <TextView
                            android:id="@+id/value_categorieco2"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10px"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/disponible"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/categorieco2">
                    <TextView
                            android:id="@+id/label_disponible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/disponible"/>
                    <TextView
                            android:id="@+id/value_disponible"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10px"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/promotion"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/disponible">
                    <TextView
                            android:id="@+id/label_promotion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/promotion"/>
                    <TextView
                            android:id="@+id/value_promotion"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10px"/>
                </LinearLayout>
                <LinearLayout
                        android:id="@+id/agemin"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        app:layout_constraintBottom_toTopOf="@id/promotion">
                    <TextView
                            android:id="@+id/label_agemin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/agemin"/>
                    <TextView
                            android:id="@+id/value_agemin"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="10px"/>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>